# VroomVroomGoesBrrr

./: .gitignore  Cargo.toml  DOC.md  trackmania.py
VroomVroomCli/: Cargo.toml
VroomVroomCli/src/: main.rs
VroomVroomFront/: .gitignore  README.md  angular.json  package-lock.json  package.json
VroomVroomFront/src/: index.html
VroomVroomFront/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
VroomVroomServer/: Cargo.toml  TODO.md  trackmania.py
VroomVroomServer/compose/cup2/: cfg_server.xml  docker-compose.yaml
VroomVroomServer/compose/cup4/: cfg_server.xml
VroomVroomServer/compose/cup5/: docker-compose.yaml
VroomVroomServer/compose/cup6/: cfg_server.xml  docker-compose.yaml
VroomVroomServer/compose/cup7/: cfg_server.xml  (+1 more)
VroomVroomServer/doc/: component.plantuml  event.plantuml
VroomVroomServer/src/: main.rs
common-cli-messages/: Cargo.toml
common-cli-messages/src/: lib.rs
compose/cup1/: cfg_server.xml  docker-compose.yaml
compose/cup2/: cfg_server.xml
compose/cup3/: cfg_server.xml  docker-compose.yaml
compose/cup4/: cfg_server.xml  docker-compose.yaml
compose/cup5/: cfg_server.xml
compose/cup6/: cfg_server.xml
compose/cup7/: cfg_server.xml
compose/cup8/: cfg_server.xml  docker-compose.yaml
compose/test/: cfg_server.xml
compose/time/: cfg_server.xml  docker-compose.yaml
compose/train/: cfg_server.xml  cfg_server1.xml.save  docker-compose.yaml
src/: main.rs
src/controllers/: mod.rs  models.rs  web.rs
src/events/: models.rs
src/orchestrator/: orchestrator.rs  server_event.rs
src/server/: server.rs
(+66 files in other folders)
