[package]
name = "trackmania-server-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
axum = "0.8.0-alpha.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing-subscriber = "0.3.18"
