[package]
name = "vroom_vroom_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.20"
common-cli-messages = { path = "../common-cli-messages" }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
